Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Campaign_Member__c/UB_Campaign_Member__c.object-meta.xml
<CustomObject>
    <label>UB Campaign Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UB Campaign Member</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>