Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Campaign_Member__c/fields/UB_Address__c.field-meta.xml
<CustomField>
    <fullName>UB_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>