Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Campaign_Member__c/fields/UB_Email__c.field-meta.xml
<CustomField>
    <fullName>UB_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>