Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Campaign_Member__c/fields/UB_Mobile__c.field-meta.xml
<CustomField>
    <fullName>UB_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>