Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Campaign_Member__c/fields/UB_Outlet__c.field-meta.xml
<CustomField>
    <fullName>UB_Outlet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Campaign_Member</relationshipName>
    <type>Lookup</type>
</CustomField>