Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Campaign_Member__c/fields/UB_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>UB_Redeemed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redeemed</label>
    <type>Checkbox</type>
</CustomField>