Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Campaign_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UB_Email__c</columns>
    <columns>UB_Mobile__c</columns>
    <columns>UB_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>